add Youtube Player Plugin (Vue3)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "nuxt": "3.0.0"
   },
   "dependencies": {
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "vue3-youtube": "^0.1.9"
   }
 }
